Code cleanup. #1